tests/negative/semantics/pipe_type_mismatch.stream
// EXPECT: Error
function eatInt(n: Int) -> Int { return n; }

// Error: "Hello" is String, eatInt wants Int
"Hello" |> eatInt;